--- a/index.html
+++ b/index.html
@@ -4,26 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <div id="head">
-            <h1>Header logo</h1>
-            <div id="links">
-                <p>Header link one</p>
-                <p>Header link two</p>
-                <p>Header link three</p>
+        <div id="hero">
+            <div id="head">
+                <h3>Header logo</h3>
+                <div id="links">
+                    <p>header link one</p>
+                    <p>header link two</p>
+                    <p>header link three</p>
+                </div>
             </div>
-        </div>
-        <div id="left">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that 
-                goes under the main title.Its a smaller font and 
-            the color is lower contrast</p>
-            <button>Sign up</button>
-        </div>
-        <div id="right">
-            <p>this is a placeholder for an image</p>
+            <div id="content">
+                <div id="left">
+                    <h3>This website is awesome</h3>
+                    <p>This website has some subtext that 
+                        goes under the main title.Its a smaller font and 
+                    the color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <div id="right">
+                    <p>this is a placeholder for an image</p>
+                </div>
+            </div>
         </div>
     </header>
     <main>
