Gotov quote dio

--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
         </div>
     </main>
     <div id="quote">
-        <p>This is an inspiring quote,or a 
-            testimonial from a customer.Maybe its
-             just filling up space,or maybe people 
-             will actually read it.Who knows? All I
-              know is that it looks nice.</p>
-        <h1>-Thor,God of Thunder</h1>
+        <div id="text">
+            <p>This is an inspiring quote,or a 
+                testimonial from a customer.Maybe its
+                just filling up space,or maybe people 
+                will actually read it.Who knows? All I
+                know is that it looks nice.</p>
+            <h1>-Thor,God of Thunder</h1>
+        </div>
     </div>
     <div id="signup">
         <div id="box">
