--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
     </div>
     <div id="signup">
         <div id="box">
-            <div id="left">
-                <h1>Call to action! Its time!</h1>
-                <p>Sign up for our product by clicking 
-                    that button right over there!</p>
-            </div>
-            <div id="right">
-                <button>Sign up</button>
+            <div id="box_content">
+                <div id="left">
+                    <h1>Call to action! Its time!</h1>
+                    <p>Sign up for our product by clicking 
+                        that button right over there!</p>
+                </div>
+                <div id="right">
+                    <button>Sign up</button>
+                </div>
             </div>
         </div>
     </div>
